# pysmorg

./: README.md  pyproject.toml
src/pysmorg/data/: sqla_to_pyd.py
src/pysmorg/iterable/: __init__.py  t_range.py
src/pysmorg/observable/: __init__.py  dict.py  list.py  object.py  observer.py
tests/: test_iterable_t_range.py  test_observable_list.py  test_observable_object.py
